--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,5 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ff4444",
-  "description": "Platform proyek konten kreatif seputar multimedia, gaya hidup, dan dakwah yang inspiratif, edukatif, dan menghibur!",
+  "description": "Platform proyek konten kreatif seputar multimedia, gaya hidup, dan dakwah yang inspiratif, edukatif, dan menghibur!"
 }
