--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Aimin' Projects",
   "short_name": "Aimin' Projects",
-  "start_url": "https://aiminprojects.blogspot.com/",
+  "start_url": "https://aiminprojects.com/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ff4444",
